example/lib/src/arbs/errors/app_uk.arb
{
  "@@locale": "uk",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Сталася помилка",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Сталася несподівана помилка",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Баг-репорт надіслано успішно.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}